--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "szema",
+  "name": "login_and_getting_data",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "firebase": "^8.2.7",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
+    "firebase": "^7.24.0",
+    "firebaseui": "^4.7.3",
     "react": "^17.0.1",
-    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-redux-firebase": "^3.10.0",
-    "react-router-dom": "^5.2.0",
+    "react-firebase": "^2.2.8",
+    "react-firebaseui": "^4.1.0",
     "react-scripts": "4.0.2",
-    "redux": "^4.0.5",
-    "redux-firestore": "^0.15.0",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "react-with-firebase-auth": "^1.3.2",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
