--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "login_and_getting_data",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
-    "firebase": "^7.24.0",
-    "firebaseui": "^4.7.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-firebase": "^2.2.8",
-    "react-firebaseui": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "react-with-firebase-auth": "^1.3.2",
+    "sass": "^1.32.7",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -39,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^5.0.0"
   }
 }
