--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
