--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase": "^2.2.8",
+    "react-firebaseui": "^4.1.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.10.0",
@@ -24,6 +25,7 @@
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.7",
+    "scss": "^0.2.4",
     "thunk": "^0.0.1",
     "web-vitals": "^1.1.0"
   },
