--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@
 /.pnp
 .pnp.js
 
-README.md
-
 # testing
 /coverage
 
@@ -23,3 +21,4 @@ README.md
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.README.md
