--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-firebase": "^2.2.8",
     "react-firebaseui": "^4.1.0",
+    "react-image-picker": "^1.1.1",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.10.0",
