--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.32.7",
     "scss": "^0.2.4",
     "thunk": "^0.0.1",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
