--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "firebase": "^8.2.9",
+    "firebase-tools": "^9.16.6",
+    "kute": "^1.0.0",
+    "kute.js": "^2.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase": "^2.2.8",
