--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.2",
     "@progress/kendo-react-dropdowns": "^4.4.0",
     "@react-firebase/auth": "^0.2.10",
     "@testing-library/jest-dom": "^5.11.9",
@@ -21,6 +25,7 @@
     "react-firebaseui": "^4.1.0",
     "react-image-picker": "^1.1.1",
     "react-loader-spinner": "^4.0.0",
+    "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.10.0",
     "react-router": "^5.2.0",
@@ -35,6 +40,7 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.7",
     "scss": "^0.2.4",
+    "sweetalert": "^2.1.2",
     "thunk": "^0.0.1",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.0"
