--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "kute.js": "^2.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-filter-search": "^1.0.11",
     "react-firebase": "^2.2.8",
     "react-firebaseui": "^4.1.0",
     "react-image-picker": "^1.1.1",
