--- a/.github/workflows/main-workflow.yaml
+++ b/.github/workflows/main-workflow.yaml
@@ -26,13 +26,14 @@ jobs:
     needs: [APP-CI]
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     name: Firebase build and preview on PR
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SZEMA_BETA }}'
-          projectId: szema-beta
+    - uses: actions/checkout@v2
+    - uses: FirebaseExtended/action-hosting-deploy@v0
+      with:
+        repoToken: '${{ secrets.GITHUB_TOKEN }}'
+        firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SZEMA_BETA }}'
+        projectId: szema-beta
     build_and_deploy:
     needs: [APP-CI]
     if: success()
