Added correct PR wflow

--- a/.github/workflows/main-workflow.yaml
+++ b/.github/workflows/main-workflow.yaml
@@ -24,12 +24,12 @@ jobs:
     - run: npm run build
   build_and_preview:
     needs: [APP-CI]
-    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }} and success()'
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     name: Firebase build and preview on PR
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    #- run: npm run build
+    - run: npm run build
     - uses: FirebaseExtended/action-hosting-deploy@v0
       with:
         repoToken: '${{ secrets.GITHUB_TOKEN }}'
